Update service card links to direct users to new forms for accommodation and job opportunities

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 </div>
                 
                 <div class="service-card">
-                    <a href="https://ejemplo.com/alojamiento" target="_blank">
+                    <a href="https://forms.gle/TGVetkxJbkVNkWBX7" target="_blank">
                         <i class="fas fa-house-chimney"></i>
                         <h3>Alojamiento</h3>
                         <p>Ayuda para encontrar vivienda digna y con precios accesibles cerca del campus.</p>
@@ -551,7 +551,7 @@
                 </div>
 
                 <div class="service-card">
-                    <a href="https://ejemplo.com/trabajo" target="_blank">
+                    <a href="https://forms.gle/SfcmyEmqrBT7A1cM9" target="_blank">
                         <i class="fas fa-briefcase"></i>
                         <h3>Bolsa de Trabajo</h3>
                         <p>Apoyo para conseguir un trabajo de medio tiempo con horarios flexibles para solventar gastos estudiantiles.</p>
